# OpenGL-Experiments

./: .gitignore  CMakeLists.txt  README.md  Run.sh  imgui.ini  premake5.lua
Foundations/: Main.cpp  PCHeader.cpp  PCHeader.h
Foundations/Graphics/: Quad.cpp  Quad.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
Foundations/Modules/: QuadModule.cpp  TriangleModule.cpp  TriangleModule.h
Foundations/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Foundations/System/: Application.cpp  Application.h  Module.h  Window.cpp  Window.h
Foundations/System/GUI/: GUILayer.cpp  GUILayer.h
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/glm/glm/gtx/: matrix_decompose.inl
Libraries/glm/glm/simd/: common.h
Old Modules/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  MultiModel.cpp  MultiModel.h  old_readme.md
Old Modules/Elements/: Terrain.h
Old Modules/Elements/Marching Cubes/: Marcher.cpp  Marcher.h
Old Modules/Modules/Custom Renderer Pass/: FogModule.cpp  FogModule.h  GeometryQuadModule.cpp  GerstnerWaveModule.cpp  InstancedModule.h  MaterialModelModule.h  PostProcessingModule.h  RayMarchingModule.cpp  RayMarchingModule.h  TerrainSceneModule.cpp  TerrainSceneModule.h
Old Modules/Modules/Default Renderer Pass/: CubeModule.cpp  CubeModule.h  ModelModule.cpp  ModelModule.h  PlaneModule.h  QuadModule.cpp  TerrainModule.cpp  TerrainModule.h  TriangleModule.h
Resources/: basic.fragment.glsl  basic.vertex.glsl  lit.basic.fragment.glsl  lit.basic.vertex.glsl
Resources/Models/: tree_low.mtl
Resources/Shaders/: default.fragment.glsl  default.vertex.glsl  geoquad.fragment.glsl  geoquad.geometry.glsl  geoquad.vertex.glsl
Resources/Shaders/Fog/: fog.fragment.glsl  fog.vertex.glsl
Resources/Shaders/GUI/: gui.fragment.glsl  gui.vertex.glsl
Resources/Shaders/Gerstner/: gerstner.fragment.glsl  gerstner.vertex.glsl
Resources/Shaders/Model/: inst-model.fragment.glsl  inst-model.vertex.glsl  model.fragment.glsl  model.vertex.glsl
Resources/Shaders/PostProcessing/: depth.fragment.glsl  pp.fragment.glsl  pp.vertex.glsl
Resources/Shaders/RayMarch/: ray.fragment.glsl  ray.vertex.glsl
Resources/Shaders/Terrain Scene/: sky.fragment.glsl  sky.vertex.glsl  terrain.fragment.glsl  terrain.vertex.glsl
Resources/Shaders/Toon/: toon.fragment.glsl
Resources/Shaders/Water/: scene.fragment.glsl  scene.vertex.glsl  water.fragment.glsl
Source/: Application.cpp  Application.h  Common.h  main.cpp
Source/Components/Marching Cubes/: Marcher.cpp  Marcher.h  Tables.h
Source/Components/Terrain/: Terrain.cpp  Terrain.h
Source/Elements/: Terrain.cpp  Terrain.h
Source/Elements/Marching Cubes/: Marcher.cpp  Marcher.h  Tables.h
Source/Framework/: Renderer.cpp  Renderer.h  Repository.cpp  Repository.h  Simulation.cpp  Simulation.h
Source/Framework/Components/: Material.cpp  Material.h  Transform.cpp
Source/Framework/Components/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.h
Source/Framework/GL/: BufferUtils.cpp  BufferUtils.h  DrawHandler.cpp  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureCube.cpp  TextureCube.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source/Framework/Geometry/: Mesh.h  Shapes2D.cpp  Shapes2D.h  Shapes3D.cpp  Shapes3D.h  Vertex.h
Source/Graphics/: Cube.cpp  Cube.h  FlatCube.cpp  FlatCube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MultiModel.cpp  MultiModel.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
Source/Graphics/Camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h
Source/Graphics/Properties/: Material.cpp  Material.h  Transform.cpp  Transform.h
Source/Math/Random/: Perlin.cpp  Perlin.h  Random.cpp  Random.h
Source/Modules/: CubeModule.cpp  CubeModule.h  ModelModule.cpp  ModelModule.h  PlaneModule.cpp  PlaneModule.h  QuadModule.cpp  QuadModule.h  TerrainModule.cpp  TerrainModule.h  TextureModule.cpp  TextureModule.h  TriangleModule.cpp  TriangleModule.h
Source/Modules/Custom Renderer Pass/: FogModule.cpp  FogModule.h  GeometryQuadModule.cpp  GeometryQuadModule.h  GerstnerWaveModule.cpp  GerstnerWaveModule.h  InstancedModule.cpp  InstancedModule.h  MaterialModelModule.cpp  MaterialModelModule.h  PostProcessingModule.cpp  PostProcessingModule.h  RayMarchingModule.h  TerrainSceneModule.cpp  TerrainSceneModule.h  WaterModule.cpp  WaterModule.h
Source/Modules/Default Renderer Pass/: CubeModule.cpp  CubeModule.h  MarchingCubesModule.cpp  MarchingCubesModule.h  ModelModule.cpp  ModelModule.h  PlaneModule.cpp  PlaneModule.h  QuadModule.cpp  QuadModule.h  TerrainModule.h  TriangleModule.cpp  TriangleModule.h
Source/OpenGL/: DrawHandler.cpp  DrawHandler.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureCube.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source/Simulations/GerstnerWave/: GerstnerWaveSim.cpp  GerstnerWaveSim.h
Source/Simulations/MarchingCubes/: MarchingCubesSim.cpp  MarchingCubesSim.h
Source/Simulations/PerlinTerrain/: PerlinTerrainSim.cpp  PerlinTerrainSim.h
Source/Simulations/RayMarching/: RayMarchingSim.cpp  RayMarchingSim.h
Source/Simulations/Simple/: RectangleSim.cpp  RectangleSim.h  TriangleSim.cpp  TriangleSim.h
Source/Simulations/SimpleGeometry/: SimpleGeometrySim.cpp  SimpleGeometrySim.h
Source/Simulations/ToonShading/: ToonShadingSim.cpp  ToonShadingSim.h
Source/System/: Application.cpp  Application.h  Clock.cpp  Clock.h  Module.h  Window.cpp  Window.h
Source/System/GUI/: GUILayer.cpp  GUILayer.h
